--- a/style.css
+++ b/style.css
@@ -4,50 +4,50 @@ Author:Team
 Version:1.0
 */
 :root {
-  --primary-color: rgb(255, 227, 117);
-  --bg-color: #012e29;
-  --sky: linear-gradient(120deg, #a1c4fd 0%, #c2e9fb 100%);
-  --Anton: "Anton", sans-serif;
-  --Baloo: "Baloo", sans-serif;
-  --Convergence: "Convergence", cursive;
-  --Josefin: "Josefin", sans-serif;
-  --Josefin_I: "Josefin_I", sans-serif;
-  --Lexend: "Lexend", sans-serif;
-  --Livvic: "Livvic", sans-serif;
-  --Livvic_I: "Livvic_I", sans-serif;
-  --Montserrat: "Montserrat", sans-serif;
-  --Raleway: "Raleway", sans-serif;
-  --Roboto_Slab: "Roboto_Slab", sans-serif;
-  --Rubik: "Rubik", sans-serif;
+    --primary-color: rgb(255, 227, 117);
+    --bg-color: #012e29;
+    --sky: linear-gradient(120deg, #a1c4fd 0%, #c2e9fb 100%);
+    --Anton: "Anton", sans-serif;
+    --Baloo: "Baloo", sans-serif;
+    --Convergence: "Convergence", cursive;
+    --Josefin: "Josefin", sans-serif;
+    --Josefin_I: "Josefin_I", sans-serif;
+    --Lexend: "Lexend", sans-serif;
+    --Livvic: "Livvic", sans-serif;
+    --Livvic_I: "Livvic_I", sans-serif;
+    --Montserrat: "Montserrat", sans-serif;
+    --Raleway: "Raleway", sans-serif;
+    --Roboto_Slab: "Roboto_Slab", sans-serif;
+    --Rubik: "Rubik", sans-serif;
 }
 
 * {
-  padding: 0;
-  margin: 0;
+    padding: 0;
+    margin: 0;
 }
 
 body {
-  font-family: Arial, sans-serif;
-  font-size: 14px;
-  color: #333;
-  overflow-x: hidden;
+    font-family: Arial, sans-serif;
+    font-size: 14px;
+    color: #333;
+    overflow-x: hidden;
 }
 
 a:link,
 a:visited {
-  color: #006ec3;
+    color: #006ec3;
 }
 
 p {
-  line-height: 1.65em;
+    line-height: 1.65em;
 }
 
 /* General Layout */
 
 div.container {
-  max-width: 920px;
-  margin: 0 auto;
-  padding: 0 20px;
+    max-width: 920px;
+    margin: 0 auto;
+    padding: 0 20px;
 }
 
 /* General Layout */
@@ -62,226 +62,224 @@ div.container {
 
 /* BLog Post */
 article.post {
-  border-bottom: 2px dotted #bbbbbb;
+    border-bottom: 2px dotted #bbbbbb;
 }
 
 article.post:last-of-type {
-  border-bottom: 0;
+    border-bottom: 0;
 }
 
 /* BLog Post */
 
 /* Navigation Menus */
 .site-nav ul {
-  margin: 0;
-  padding: 0;
+    margin: 0;
+    padding: 0;
 }
 
 .site-header .site-nav {
-  display: grid;
-  grid-template-columns: 2fr 1fr 2fr;
-  grid-gap: 20px;
+    display: grid;
+    grid-template-columns: 2fr 1fr 2fr;
+    grid-gap: 20px;
 }
 
 .site-nav {
-  background: url("./back.png");
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-position: right bottom;
-  padding: 20px 40px;
-  font-size: 18px;
-  align-items: center;
+    background: url("./back.png");
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: right bottom;
+    padding: 20px 40px;
+    font-size: 18px;
+    align-items: center;
 }
 
 .site-nav .item {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  white-space: nowrap;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    white-space: nowrap;
 }
 
 .site-nav a {
-  color: var(--primary-color) !important;
-  background: transparent;
-  font-family: "Times New Roman", serif;
-  font-size: 19px;
-  padding: 0 15px;
-  letter-spacing: 1.4px;
-  text-decoration: none;
+    color: var(--primary-color) !important;
+    background: transparent;
+    font-family: "Times New Roman", serif;
+    font-size: 19px;
+    padding: 0 15px;
+    letter-spacing: 1.4px;
+    text-decoration: none;
 }
 
 .site-nav a:hover {
-  color: var(--primary-color) !important;
-  background: transparent !important;
-  text-decoration: none;
+    color: var(--primary-color) !important;
+    background: transparent !important;
+    text-decoration: none;
 }
 
 .site-nav li.current-menu-item a {
-  color: #f2fffc !important;
-  background: transparent !important;
-  text-decoration: none;
+    color: #f2fffc !important;
+    background: transparent !important;
+    text-decoration: none;
 }
 
 .site-nav a:focus {
-  color: var(--primary-color) !important;
-  background: transparent !important;
-  text-decoration: none;
+    color: var(--primary-color) !important;
+    background: transparent !important;
+    text-decoration: none;
 }
 
 .site-nav .nav-brand img {
-  width: 140px;
+    width: 140px;
 }
 
 .site-nav ul li {
-  display: inline-block;
-  position: relative;
+    display: inline-block;
+    position: relative;
 }
 
 .site-nav li ul {
-  display: none;
-  padding-top: 10px;
-  position: absolute;
-  border-radius: 4px;
-  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+    display: none;
+    padding-top: 10px;
+    position: absolute;
+    border-radius: 4px;
+    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
 }
 
 .site-nav li ul li {
-  padding: 5px 0;
-  display: none;
-  background: #0f030388;
-  text-align: center;
+    padding: 5px 0;
+    display: none;
+    background: #0f030388;
+    text-align: center;
 }
 
-.site-nav li:hover > ul,
-.site-nav li:hover > ul li {
-  display: block;
+.site-nav li:hover>ul,
+.site-nav li:hover>ul li {
+    display: block;
 }
 
-.site-nav li:hover > a {
-  color: rgb(216, 227, 231) !important;
+.site-nav li:hover>a {
+    color: rgb(216, 227, 231) !important;
 }
 
 /* Footer Links */
 .site-footer .site-nav {
-  padding: 0 !important;
-  margin: 0 !important;
-  background: none;
+    padding: 0 !important;
+    margin: 0 !important;
+    background: none;
 }
 
 .site-footer .site-nav ul {
-  margin: 0;
-  padding: 0;
+    margin: 0;
+    padding: 0;
 }
 
 .site-footer .site-nav li {
-  display: block;
+    display: block;
 }
 
 .site-footer .site-nav li a {
-  color: white !important;
-  font-family: Rubik;
+    color: white !important;
+    font-family: Rubik;
 }
 
 /* Footer Links */
 /* Footer Nav */
 .site-footer {
-  background: url("./back.png");
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-position: center center;
-  color: white;
-  font-family: "Times New Roman", serif;
-  font-size: 1.1em;
-  padding: 0;
-  margin: 0;
+    background: url("./back.png");
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center center;
+    color: white;
+    font-family: "Times New Roman", serif;
+    font-size: 1.1em;
+    padding: 0;
+    margin: 0;
 }
 
 .site-footer .wrapper {
-  display: grid;
-  grid-template-columns: repeat(4, 1fr);
-  margin: 0px 30px;
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    margin: 0px 30px;
 }
 
 .site-footer .site-nav {
-  padding: 20px 60px 0 60px;
+    padding: 20px 60px 0 60px;
 }
 
 .site-footer .rights {
-  padding: 10px;
-  font-family: "Times New Roman", serif;
-  color: rgb(236, 235, 226);
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  font-size: 1.2em;
-  font-family: Baloo;
+    padding: 10px;
+    font-family: "Times New Roman", serif;
+    color: rgb(236, 235, 226);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 1.2em;
+    font-family: Baloo;
 }
 
-.site-footer .wrapper > div {
-  flex-grow: 1;
-  flex-basis: 0;
-  padding: 20px 0.9rem;
-  letter-spacing: 1px;
-  font-size: 1.1em;
-  font-family: var(--Rubik);
-  line-height: 1.75em;
+.site-footer .wrapper>div {
+    flex-grow: 1;
+    flex-basis: 0;
+    padding: 20px 0.9rem;
+    letter-spacing: 1px;
+    font-size: 1.1em;
+    font-family: var(--Rubik);
+    line-height: 1.75em;
 }
 
 /* .site-footer .wrapper h2 {
   color: var(--primary-color);
   font-family: var(--Josefin);
 } */
-h2 {
-  background-position: 140% 0;
-  background-color: var(--primary-color);
-  font-family: var(--Josefin);
-  background-image: linear-gradient(
-    -75deg,
-    transparent 0,
-    transparent 50%,
-    rgba(255, 255, 255, 1) 50%,
-    rgba(255, 255, 255, 1) 80%,
-    transparent 80%,
-    transparent 100%
-  );
-  background-size: 200% 100%;
-  -webkit-text-fill-color: transparent;
-  -webkit-background-clip: text;
-  background-clip: text;
-  transition: 0.75s;
+.site-footer h2 {
+    background-position: 140% 0;
+    background-color: var(--primary-color);
+    font-family: var(--Josefin);
+    background-image: linear-gradient(-75deg,
+            transparent 0,
+            transparent 50%,
+            rgba(255, 255, 255, 1) 50%,
+            rgba(255, 255, 255, 1) 80%,
+            transparent 80%,
+            transparent 100%);
+    background-size: 200% 100%;
+    -webkit-text-fill-color: transparent;
+    -webkit-background-clip: text;
+    background-clip: text;
+    transition: 0.75s;
 }
 
-h2:hover {
-  background-position: -100% 0;
+.site-footer h2:hover {
+    background-position: -100% 0;
 }
 
 /* .site-footer .reach-us {} */
 
 .site-footer .newsletter .form-element {
-  display: inline-block;
-  padding: 0;
+    display: inline-block;
+    padding: 0;
 }
 
 .site-footer .newsletter .form-element input {
-  padding: 5px 10px;
-  border: 0;
-  /* background: transparent; */
-  color: var(--bg-color);
-  font-family: var(--Convergence);
-  font-size: 1rem;
-  width: 74%;
+    padding: 5px 10px;
+    border: 0;
+    /* background: transparent; */
+    color: var(--bg-color);
+    font-family: var(--Convergence);
+    font-size: 1rem;
+    width: 74%;
 }
 
 .site-footer .newsletter .form-element button {
-  color: var(--primary-color);
-  padding: 6.5px 20px 6.5px 23px;
-  cursor: pointer;
-  border-radius: 0;
+    color: var(--primary-color);
+    padding: 6.5px 20px 6.5px 23px;
+    cursor: pointer;
+    border-radius: 0;
 }
 
 .site-footer .newsletter .form-element button:focus {
-  background-color: var(--primary-color);
-  color: var(--bg-color);
+    background-color: var(--primary-color);
+    color: var(--bg-color);
 }
 
 /* .site-footer .instagram div>img {
@@ -291,22 +289,22 @@ h2:hover {
 } */
 
 .site-footer .social-links i {
-  padding: 0 4px;
-  font-size: 1.5em;
-  color: rgb(255, 242, 191);
+    padding: 0 4px;
+    font-size: 1.5em;
+    color: rgb(255, 242, 191);
 }
 
 .site-footer .social-links i:hover {
-  color: white;
+    color: white;
 }
 
 .site-footer .reach-us a {
-  color: rgb(212, 252, 204);
-  text-decoration: none;
+    color: rgb(212, 252, 204);
+    text-decoration: none;
 }
 
 .site-footer .reach-us a:hover {
-  color: white;
+    color: white;
 }
 
 /* Footer Nav */
@@ -314,73 +312,73 @@ h2:hover {
 /* Navigation Menus */
 
 article.page h2 {
-  font-size: 300%;
+    font-size: 300%;
 }
 
 /* Clients  */
 .carousel {
-  /* background-color: #ffffe0 !important; */
-  background-color: #c5d7be77 !important;
-  height: 200px;
-  display: flex !important;
-  align-items: center;
+    /* background-color: #ffffe0 !important; */
+    background-color: #c5d7be77 !important;
+    height: 200px;
+    display: flex !important;
+    align-items: center;
 }
 
 .block {
-  height: 150px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+    height: 150px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 
-  position: relative;
+    position: relative;
 }
 
 .block img {
-  transition: transform ease 0.38s;
+    transition: transform ease 0.38s;
 }
 
 .block::after {
-  position: absolute;
-  left: 50%;
-  bottom: 10px;
-  content: "";
-  background: #fff;
-  height: 2.5px;
-  border-radius: 2px;
-  width: 0%;
-  transition: width ease 0.28s, left ease 0.28s;
+    position: absolute;
+    left: 50%;
+    bottom: 10px;
+    content: "";
+    background: #fff;
+    height: 2.5px;
+    border-radius: 2px;
+    width: 0%;
+    transition: width ease 0.28s, left ease 0.28s;
 }
 
 .block:hover img {
-  transform: translate(0px, -10px);
+    transform: translate(0px, -10px);
 }
 
 .block:hover::after {
-  left: 40%;
-  width: 20%;
+    left: 40%;
+    width: 20%;
 }
 
 /* Clients  */
 
 /* Media Queries */
 @media screen and (max-width: 1200px) {
-  .site-nav .nav-links {
-    display: none;
-  }
+    .site-nav .nav-links {
+        display: none;
+    }
 }
 
 @media screen and (max-width: 768px) {
-  .site-footer .wrapper {
-    grid-template-columns: repeat(2, 1fr);
-    padding: 0;
-    margin: 0;
-  }
+    .site-footer .wrapper {
+        grid-template-columns: repeat(2, 1fr);
+        padding: 0;
+        margin: 0;
+    }
 }
 
 @media screen and (max-width: 600px) {
-  .site-footer .wrapper {
-    grid-template-columns: repeat(1, 1fr);
-  }
+    .site-footer .wrapper {
+        grid-template-columns: repeat(1, 1fr);
+    }
 }
 
 /* Media Queries */
