--- a/style.css
+++ b/style.css
@@ -298,6 +298,11 @@ article.post:last-of-type {
     padding: 20px 60px 0 60px;
 }
 
+.site-footer .site-nav a {
+    font-size: 13px;
+    padding: 0;
+}
+
 .site-footer .rights {
     padding: 10px;
     font-family: "Times New Roman", serif;
@@ -313,14 +318,16 @@ article.post:last-of-type {
     flex-grow: 1;
     flex-basis: 0;
     padding: 20px 0.9rem;
+    padding-bottom: 5px;
     letter-spacing: 1px;
-    font-size: 16px !important;
+    font-size: 13px !important;
     font-family: var(--Rubik);
-    line-height: 30px;
+    line-height: 25px;
 }
 
 
 .site-footer h2 {
+    font-size: 25px;
     font-family: "Times New Roman",
         serif;
     background-position: 140% 0;
