--- a/style.css
+++ b/style.css
@@ -139,6 +139,9 @@ article.post:last-of-type {
     white-space: nowrap;
 }
 
+
+
+
 .site-header .site-nav a {
     color: var(--primary-color) !important;
     background: transparent;
@@ -169,6 +172,10 @@ article.post:last-of-type {
 
 .site-nav .nav-brand img {
     width: 140px;
+}
+
+.nav-brand .brand-title {
+    display: none;
 }
 
 .site-nav ul li {
@@ -204,12 +211,12 @@ article.post:last-of-type {
 /* Responsive nav */
 .nav-toggle-btn {
     position: absolute;
-    right: 10px;
-    border-radius: 0 0 5px 5px;
+    right: 50px;
+    /* border-radius: 0 0 5px 5px; */
     border-top: 0;
     outline: 0;
     display: none;
-    color: var(--primary-color);
+    background-color: var(--primary-color);
 }
 
 .nav-toggle-btn:hover {
@@ -459,18 +466,43 @@ article.page h2 {
 /* Clients  */
 
 /* Media Queries */
+@media screen and (min-width:1440px) {
+    .site-nav .item.pri1 {
+        justify-content: flex-end;
+    }
 
-@media screen and (max-width: 1200px) {
+    .site-nav .item.pri2 {
+        justify-content: flex-start;
+    }
+
+    .site-header .site-nav a {
+        padding: 0 45px;
+    }
+}
+
+@media screen and (max-width: 1100px) {
     .site-nav .nav-links {
         display: none;
     }
 
+    .nav-brand .brand-title {
+        display: block;
+        width: 200px !important;
+        transform: scale(1.4);
+        text-align: center;
+    }
+
     .nav-toggle-btn {
         display: block;
+        right: 30px;
     }
 
     .page-title h1 {
         font-size: 6vw;
+    }
+
+    .site-nav .nav-brand img {
+        width: 110px;
     }
 }
 
@@ -479,6 +511,22 @@ article.page h2 {
         grid-template-columns: repeat(2, 1fr);
         padding: 0;
         margin: 0;
+    }
+
+    .nav-brand .brand-title {
+        display: block;
+        /* width: 170px !important; */
+        transform: scale(1.3);
+        text-align: center;
+    }
+
+
+    .nav-toggle-btn {
+        right: 15px;
+    }
+
+    .site-nav .nav-brand img {
+        width: 90px;
     }
 
     .site-footer .wrapper>div {
@@ -498,6 +546,17 @@ article.page h2 {
     .page-title h1 {
         font-size: 10vw;
 
+    }
+
+    .site-nav .nav-brand img {
+        width: 65px;
+    }
+
+    .nav-brand .brand-title {
+        display: block;
+        width: 140px !important;
+        transform: scale(1.3);
+        text-align: center;
     }
 }
 
