--- a/style.css
+++ b/style.css
@@ -26,6 +26,11 @@ Version:1.0
     margin: 0;
 }
 
+html {
+    padding: 0 !important;
+    margin: 0 !important;
+}
+
 body {
     font-family: Arial, sans-serif;
     font-size: 14px;
@@ -579,12 +584,14 @@ article.page h2 {
 /* .ent-header {} */
 
 .ent-header.scrolled {
-    position: fixed;
-    z-index: 10;
+    position: -webkit-sticky;
+    position: sticky;
     top: 0;
+    z-index: 10;
     width: 100%;
     margin: 0;
     transition: position 200ms ease;
+    background-color: #fff;
 }
 
 
@@ -631,6 +638,8 @@ article.page h2 {
     padding-top: 20px;
 }
 
+.ent-nav ul li:hover {}
+
 
 
 .ent-nav .wrapper ul {
@@ -644,11 +653,11 @@ article.page h2 {
 }
 
 .ent-nav .wrapper li ul {
+    background-color: #fff;
     display: none;
-    padding-top: 10px;
+    padding: 15px;
     position: absolute;
     border-radius: 4px;
-    padding-bottom: 10px;
     box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.4);
 }
 
@@ -695,7 +704,7 @@ article.page h2 {
 
 .ent-footer {
     margin-top: 30px;
-    min-height: 250px;
+    min-height: 550px;
     color: #ffffff;
     font-size: 18px;
     font-weight: 500;
