--- a/Humsafar Image slider/css/demo.css
+++ b/Humsafar Image slider/css/demo.css
@@ -106,7 +106,7 @@ a{
 	line-height: 24px;
 	font-size: 11px;
 	width: 100%;
-	background: #000;
+	background: transparent;
 	opacity: 0.9;
 	text-transform: uppercase;
 	z-index: 9999;
