--- a/style.css
+++ b/style.css
@@ -327,7 +327,7 @@ article.post:last-of-type {
     display: flex;
     justify-content: center;
     align-items: center;
-    font-size: 1.2em;
+    font-size: 17px;
     font-family: Baloo;
 }
 
@@ -556,7 +556,6 @@ article.page h2 {
 
     .page-title h1 {
         font-size: 10vw;
-
     }
 
     .site-nav .nav-brand img {
