--- a/style.css
+++ b/style.css
@@ -341,11 +341,62 @@ article.post:last-of-type {
 .my-responsive-nav ul li {
     list-style: none;
     padding: 10px !important;
+    display: block;
+    position: relative;
+}
+
+.my-responsive-nav ul li::after {
+    content: '';
+    display: block;
+    width: 0%;
+    position: absolute;
+    background-color: var(--primary-color);
+    left: 0;
+    height: 2px;
+    border-radius: 5px;
+    transition: width 500ms ease;
+}
+
+.my-responsive-nav ul li:hover::after {
+    width: 50%;
+}
+
+
+
+.my-responsive-nav ul li ul {
+    padding-left: 0 !important;
+    padding: 0 !important;
+    margin: 0 !important;
+    display: none;
+    opacity: 0;
+    position: relative;
+    top: 10px;
 }
 
 .my-responsive-nav ul li ul li {
-    padding-left: 0 !important;
+    padding: 0 !important;
+    margin: 0 !important;
 }
+
+.my-responsive-nav ul li.menu-item-has-children::after {
+    bottom: -10px;
+}
+
+.my-responsive-nav ul li.menu-item-has-children ul li::after {
+    bottom: 5px;
+}
+
+.my-responsive-nav ul li.menu-item-has-children:hover ul {
+    display: block;
+    width: 100px;
+    min-height: 100px;
+    opacity: 1;
+}
+
+/* 
+.my-responsive-nav ul li.menu-item-has-children:active ul li {
+    display: block !important;
+} */
 
 .my-responsive-nav a {
     text-decoration: none;
