--- a/style.css
+++ b/style.css
@@ -145,39 +145,67 @@ div.wrapper.content {
     padding: 60px 0;
 }
 
-.page-title {
-    display: flex;
-    justify-content: center;
-    margin-bottom: 40px;
-    position: relative;
+.heading {
+    margin-top: 20px;
+    margin-bottom: 0;
+    text-align: center;
+    color: #2f2e2e;
+    font-size: 45px;
 }
 
-.page-title h1 {
-    font-size: 4vw;
-    font-weight: 100 !important;
-    color: #c9930086;
-    font-family: Baloo;
-    border-bottom: 2px solid #c9930086;
-    border-radius: 10px;
-    padding-bottom: 10px;
-    position: relative;
+.heading p {
+    margin: 0;
 }
 
-.page-title h1 .bow {
+.heading h1 {
+    font-family: sans-serif;
+    margin: auto;
+    text-align: center;
+    font-size: 40px;
+    max-width: 600px;
+    position: relative;
+    color: #b28f5e;
+
+}
+
+.heading h1::before,
+.heading h1::after {
+    content: "";
+    display: block;
+    width: 150px;
+    height: 3px;
+    background: #000;
     position: absolute;
-    color: black;
-    font-size: 20px;
-    width: 100%;
-    display: flex;
-    justify-content: center;
-    bottom: -15px;
+    top: 30%;
+    z-index: -2;
+    background-color: #b28f5e;
 }
 
-.bow div {
-    background: #faf8f5;
-    padding: 0 15px;
-    color: #c9930086;
+.heading h1::before {
+    left: 0;
+    margin-left: 20%;
+}
 
+.heading h1:after {
+    right: 0;
+    margin-right: 20%;
+}
+
+
+@media screen and (max-width : 700px) {
+
+    .heading h1::before,
+    .heading h1::after {
+        width: 100px;
+    }
+}
+
+@media screen and (max-width : 500px) {
+
+    .heading h1::before,
+    .heading h1::after {
+        width: 60px;
+    }
 }
 
 
