ent footer text-center

--- a/style.css
+++ b/style.css
@@ -932,6 +932,7 @@ article.page h2 {
 
 .ent-footer .wrapper .item {
     margin: 5px 10px 10px 10px;
+    text-align: center;
     font-size: 14px;
 }
 
