--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@ Version:1.0
     --primary-color: rgb(255, 227, 117);
     --bg-color: #012e29;
     --sky: linear-gradient(120deg, #a1c4fd 0%, #c2e9fb 100%);
+    --midnight: #104f55;
     --Anton: "Anton", sans-serif;
     --Baloo: "Baloo", sans-serif;
     --Convergence: "Convergence", cursive;
