--- a/style.css
+++ b/style.css
@@ -40,7 +40,7 @@ html {
 }
 
 body {
-  font-family: Arial, sans-serif;
+  font-family: "Myriad Pro", sans-serif !important;
   font-size: 14px;
   color: #333;
   overflow-x: hidden;
@@ -71,7 +71,7 @@ div.wrapper.content {
   text-align: center;
   color: #2f2e2e;
   font-size: 45px;
-  font-family: "Playfair Display", serif;
+  font-family: "Myriad Pro", sans-serif !important;
 }
 
 .heading p {
@@ -79,7 +79,7 @@ div.wrapper.content {
 }
 
 .heading h1 {
-  font-family: sans-serif;
+  font-family: "Myriad Pro", sans-serif !important;
   margin: auto;
   text-align: center;
   font-size: 40px;
@@ -184,7 +184,7 @@ article.post:last-of-type {
 .site-header .site-nav a {
   color: var(--primary-color) !important;
   background: transparent;
-  font-family: "Times New Roman", serif;
+  font-family: "Myriad Pro", sans-serif !important;
   font-size: 16px;
   padding: 0 15px;
   letter-spacing: 1.4px;
@@ -350,7 +350,7 @@ article.post:last-of-type {
   text-decoration: none;
   color: var(--primary-color);
   font-size: 16px;
-  font-family: var(--Josefin);
+  font-family: "Myriad Pro", sans-serif !important;
 }
 
 .my-responsive-nav li.current-menu-item a {
@@ -377,7 +377,7 @@ article.post:last-of-type {
 
 .site-footer .site-nav li a {
   color: white !important;
-  font-family: Rubik;
+  font-family: "Myriad Pro", sans-serif !important;
 }
 
 /* Footer Links */
@@ -388,7 +388,7 @@ article.post:last-of-type {
   background-size: cover;
   background-position: right center;
   color: white;
-  font-family: "Times New Roman", serif;
+  font-family: "Myriad Pro", "Times New Roman", serif;
   font-size: 0.95em;
   padding: 0;
   margin: 0;
@@ -415,13 +415,12 @@ article.post:last-of-type {
 
 .site-footer .rights {
   padding: 10px;
-  font-family: "Times New Roman", serif;
+  font-family: "Myriad Pro", sans-serif !important;
   color: #ecebe2;
   display: flex;
   justify-content: center;
   align-items: center;
   font-size: 17px;
-  font-family: Baloo;
 }
 
 .site-footer .wrapper > div {
@@ -431,17 +430,17 @@ article.post:last-of-type {
   padding-bottom: 5px;
   letter-spacing: 1px;
   font-size: 13px !important;
-  font-family: var(--Rubik);
+  font-family: "Myriad Pro", sans-serif !important;
   line-height: 25px;
   max-width: 275px;
 }
 
 .site-footer h2 {
   font-size: 25px;
-  font-family: "Times New Roman", serif;
+  font-family: "Myriad Pro", sans-serif !important;
   background-position: 140% 0;
   background-color: var(--primary-color);
-  /* font-family: var(--Josefin); */
+
   background-image: linear-gradient(
     -75deg,
     transparent 0,
@@ -474,7 +473,7 @@ article.post:last-of-type {
   border: 0;
   /* background: transparent; */
   color: var(--bg-color);
-  font-family: var(--Convergence);
+  font-family: "Myriad Pro", sans-serif !important;
   font-size: 1rem;
   width: 74%;
 }
@@ -746,7 +745,7 @@ article.page h2 {
   text-decoration: none;
   padding: 0 15px 0 15px;
   text-transform: uppercase;
-  font-family: serif;
+  font-family: "Myriad Pro", sans-serif !important;
 }
 
 .ent-nav ul li {
