--- a/style.css
+++ b/style.css
@@ -166,7 +166,7 @@ article.post:last-of-type {
 }
 
 .site-nav {
-  background: url("./back.png");
+  background: url("./bg2.png");
   background-repeat: no-repeat;
   background-size: cover;
   background-position: right bottom;
