--- a/style.css
+++ b/style.css
@@ -44,7 +44,7 @@ body {
   font-size: 14px;
   color: #333;
   overflow-x: hidden;
-  background-color: #fcf7ff;
+  background-color: white;
   /* overflow: hidden; */
 }
 
