--- a/StyleSheet3.css
+++ b/StyleSheet3.css
@@ -1,23 +1,1 @@
-﻿.container{
-    padding-top:40px;
-}
-
-.heading {
-    font-family: 'Times New Roman';
-    font-size: 30px;
-}
-
-.box{
-    padding-bottom:150px;
-}
-
-.para {
-    font-family: Arial;
-    color: #808080;
-    line-height: 30px;
-    text-align:justify;
-}
-.first-letter {
-    font-family: 'Times New Roman';
-    font-size: 100px;
-}
+﻿
